<resources>
    <string name="app_name">Senior Sync</string>
    <string name="personinfo">Personal Info</string>
    <string name="account">UserName：</string>
    <string name="logo">logo</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="send">Send</string>
    <string name="empty_view_text">Press the Button to add an alarm!</string>
    <string name="time">Time</string>
    <string name="label">Label</string>
    <string name="days">Days</string>
    <string name="edit_alarm">Edit Alarm</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="add_label_hint">Enter Medicine</string>
    <string name="update_complete">Changes Saved</string>
    <string name="update_failed">Update Failed</string>
    <string name="delete_complete">Alarm Deleted</string>
    <string name="delete_failed">Delete Failed</string>
    <string name="delete_dialog_title">Confirm Delete Alarm</string>
    <string name="delete_dialog_content">Are you sure you would like to delete this alarm?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="launch_main_activity">Launch Main Activity</string>
    <string name="dismiss">Dismiss</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="channel_name">Health care</string>
    <string name="MedicineName">Medicine Name</string>
    <string name="CurrentTime">Current Time</string>
    <string name="SystolicPressure">Systolic pressure：</string>
    <string name="DiastolicPressure">DiastolicPressure ：</string>
    <string name="HeartBeat">HeartBeat(bpm) ：</string>
    <string name="GlucoseAC">Glucose(AC)：</string>
    <string name="GlucosePC">Glucose(PC)：</string>
    <string name="add">add</string>
    <string name="welcome">Welcome </string>
    <string name="welcome_nav">Senior Sync</string>
    <string name="map">Map</string>
    <string name="Medicine">Reminder</string>
    <string name="Weather">Weather</string>
    <string name="Emergency">Emergency Call</string>
    <string name="Picture">Photo Creator</string>
    <string name="health">Health Monitor</string>
    <string name="select">Select Photo</string>
    <string name="screenshot">screenshot</string>
    <string name="black">B</string>
    <string name="white">W</string>
    <string name="Edit">EDIT TEXT HERE</string>
    <string name="UserName">Username</string>
    <string name="Password">Password</string>
    <string name="login">Login</string>
    <string name="Remember">Remember Password</string>
    <string name="AutoLogin">AutoLogin</string>
    <string name="Register">Register</string>
    <string name="NickName">Nickname</string>
    <string name="FullName">Full Name</string>
    <string name="Age">Age</string>
    <string name="Gender">Gender</string>
    <string name="Email">Email</string>
    <string name="Emergencyphone1">Emergency phone1</string>
    <string name="Emergencyphone2">Emergency phone2</string>
    <string name="Emergencyphone3">Emergency phone3</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="Address">Address</string>
    <string name="editprofile">Edit Profile</string>
    <string name="save">save</string>
    <string name="ApparentTemp">Feels Like</string>
    <string name="humidity">Humidity</string>
    <string name="HighTemp">Hi :</string>
    <string name="LowTemp">Lo :</string>
    <string name="visibility">Visibility</string>
    <string name="Wind">Wind</string>
    <string name="lvl1">Level 1 (Light Air)</string>
    <string name="lvl2">Level 2 (Light Breeze)</string>
    <string name="lvl3">Level 3 (Gentle Breeze)</string>
    <string name="lvl4">Level 4 (Moderate Breeze)</string>
    <string name="lvl5">Level 5 (Fresh Breeze)</string>
    <string name="lvl6">Level 6 (Strong Breeze)</string>
    <string name="lvl7">Level 7 (Near Gale)</string>
    <string name="lvl8">Level 8 (Gale)</string>
    <string name="lvl9">Level 9 (Strong Gale)</string>
    <string name="lvl10">Level 10 (Whole Gale)</string>
    <string name="lvl11">Level 11 (Storm Force)</string>
    <string name="lvl12">Level 12 (Hurricane Force)</string>
    <string name="lvl0">Level 0 (Calm)</string>
    <string name="user">Profile</string>
    <string name="exit">Exit</string>
    <string name="social">Social</string>
    <string name="share">Share</string>
    <string name="before">Before Eating</string>
    <string name="after">After Eating</string>
    <string name="confirm">Confirm Password</string>
    <string name="context">Context Us</string>
    <string name="today">Today temperature ：</string>
    <string name="logout_content">Are you sure you want to exit? </string>
    <string name="logout_title">Logout </string>
    <string name="about_us">About us </string>
    <string name="privacy">Privacy </string>
    <string name="required">Required </string>
    <string name="optional">Optional </string>
    <string name="register_success">Registration Successful!</string>
    <string name="register_fail">Registration Failed!</string>
    <string name="user_exit">User already Exists! Please Sign In!</string>
    <string name="password_match">Password not Matching!</string>
    <string name="insert_success">Insert Successful! </string>
    <string name="insert_fail">Insert Failed </string>
    <string name="login_ps_success">Please enter the Credentials </string>
    <string name="login_ps_fail">Invalid Credentials </string>
    <string name="medicine_alarm"> Medicine </string>
    <string name="childcaution">Under The Guidance</string>
    <string name="riskcaution">SKIP complex activities</string>
    <string name="pose1">    Step 1:- Start in the push-up position with your arms completely straight and directly beneath your shoulders.\n\n
                             Step 2:- Your body should form a straight line from your shoulders to your ankles. \n\n
                             Step 3:- Squeeze your abs, lift one foot off the floor and bring your knee up towards your chest while keeping your body in as straight of a line as possible. \n\n
                             Step 4:- Return to the starting position and repeat the movement with your opposite leg.. </string>
    <string name="pose2">
        Step 1:- Lie flat on your mat with knees bent and feet on the mat. Hands at the base of your head and elbows pointed out. Using your abdominals bring your head and shoulders off the mat and come up into a crunch, then lower with control.
    </string>
    <string name="pose3">    Step 1:- This movement is performed with a bench and a foot stool.\n\n
                             Step 2:- Place a bench behind yourself and rest on it with your hands. Place your legs straight out in front of you. You may also place them at an elevated level as shown above.\n\n
                             Step 3:- Begin with arms in a fully. Slowly bend at your elbows keeping the rest of your body straight. Be sure to keep your elbows back and close together.\n\n
                             Step 4:- Dip down until your arms form a 90 degree angle and you feel a stretch in the triceps.\n\n
                             Step 5:- Slowly extend your arms raising your body back up. Pause and contract your triceps muscles at the top. Pause and repeat the movement.</string>
    <string name="pose4">    Step 1:- Lie flat on the floor with your lower back pressed to the ground (pull your navel in to also target your deep abs). \n\n
                             Step 2:- Put your hands behind your head, then bring your knees in towards your Chest and lift your shoulder blades off the ground, but be sure not to pull on your neck.\n\n
                             Step 3:-Straighten your right leg out to about a 4S-degree angle to the ground while turning your upper body to the left, bringing your right elbow towards the left knee.\n\n
                             Step 4:- Make sure your rib cage is moving and hotjust your elbows. Now switch sides and do the same motion on the other side to complete onerep. </string>
    <string name="pose5">   Step 1:- Lay down with your hands to your sides for support. \n\n
                             Step 2:- Raise your legs so they are off the ground, keeping the abdominals tight.\n\n
                             Step 3:- Slowly raise your legs 90 degrees, contracting the abdominal muscles. Slowly return to starting position. Do not touch the floor with your feet.\n\n
                            </string>
    <string name="pose6">   Step 1:- Lay down with your hands to your sides for support. \n\n
                             Step 2:- Raise your legs so they are off the ground, keeping the abdominals tight.\n\n
                             Step 3:- Slowly raise your legs 90 degrees, contracting the abdominal muscles. Slowly return to starting position. Do not touch the floor with your feet.\n\n
                            </string>
    <string name="wpose1">
JOGGING\n\n
Step 1. Stand erect and place the fists loosely on the chest.\n\n
Step 2. Start skipping on the toes and touching the heels at the back in a relaxed way. Increase the speed gradually and come to a steady jogging speed.\n\n
Step 3. Carry on deep rhythmic breathing and relax the whole body during jogging. Continue for a while.\n\n
Step 4. Switch over to forward jogging by raising the knees to the chest level. Repeat for a while.\n\n
Step 5. Continue the practice with side jogging by spreading the legs sidewards and raising the heels upwards by bending the knees. Stand a while and perform Mukha Dhouti. Relax in a standing position (Täḍāsana).
</string>
    <string name="wpose2">
MUKHA DHAUTI ( CLEANSING THROUGH A SINGLE BLAST BREATH)\n\n
Step 1. Stand with a slight forward bend of the trunk, palms on the thighs, and legs about a meter apart.\n\n
Step 2. Inhale deeply and continuously expel the air forcibly as in a jet through the mouth. This is affected by the help of the diaphragm by prolonged exhalation.\n\n
Step 3. Repeat several times
</string>
    <string name="wpose3">
LOOSENING OF ANKLE JOINTS\n\n
Step 1. Stand erect.\n\n
Step 2. Raise and stretch up both hands from the front while inhaling.\n\n
Step 3. Balance on the toes.\n\n
Step 4. Bring down the hands and feet while exhaling.
</string>
    <string name="wpose4">
LOOSENING OF KNEE JOINTS\n\n
Step 1. Stand erect with hands straight down. Inhale completely.\n\n
Step 2. Breathe out through the mouth while going down by bending the knee-joints and keeping them together.\n\n
Step 3. Keep the body straight without bending at the waist. Come up while inhaling.
</string>
    <string name="wpose5">
LOOSENING OF HIP JOINTS\n\n
Step 1. Inhale while standing erect.\n\n
Step 2. With knees far apart, but heels almost touch each other, sit down while exhaling.\n\n
Step 3. Balance on the toes and sit on the heels. Try to push the knees apart with the palms.\n\n
Step 4. Breathe in while getting up.
</string>
</resources>