<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:id="@+id/mainLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/current_time_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/CurrentTime"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/black"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_blood_pressure"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/low_pressure_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:text="90"
                android:textSize="30dp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="2dp"
                android:text="/"
                android:textSize="35dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/high_pressure_txt"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="2dp"
                android:text="120"
                android:textSize="30dp"
                android:textColor="@android:color/holo_red_dark"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="2dp"
                android:text="mmHg"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/heartbeat_txt"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="15dp"
                android:text="90"
                android:textSize="30dp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="5dp"
                android:text="BPM"
                android:textSize="15dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_blood_glucose"/>
            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/before"
                    android:gravity="center"
                    android:textSize="20dp"/>

                <TextView
                    android:id="@+id/before_eat_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="80"
                    android:textSize="30dp"
                    android:layout_gravity="center"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="mg/dL"
                    android:textSize="20dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/after"
                    android:gravity="center"
                    android:textSize="20dp"/>

                <TextView
                    android:id="@+id/after_eat_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:textSize="30dp"
                    android:layout_gravity="center"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="mg/dL"
                    android:textSize="20dp" />


            </LinearLayout>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@android:color/black"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

    </LinearLayout>

</LinearLayout>